examples/test/testpolicy3299.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3299
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key49: value9
      key3: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value26
          key23: value28
      podSelector:
        matchLabels:
          key12: value32
          key37: value28
          key32: value43
